Hackaton-Chatbot/force-app/main/default/objects/zCCP_CHT_Chat_Config__c/zCCP_CHT_Chat_Config__c.object-meta.xml
<CustomObject>
    <label>Chat Config</label>
    <nameField>
        <label>Chat Config Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Chat Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>