Hackaton-Chatbot/force-app/main/default/objects/zCCP_CHT_Chat_Config__c/fields/zCCP_CHT_Action_Answer__c.field-meta.xml
<CustomField>
    <fullName>zCCP_CHT_Action_Answer__c</fullName>
    <label>Action Answer</label>
    <type>TextArea</type>
</CustomField>