Hackaton-Chatbot/force-app/main/default/objects/zCCP_CHT_Chat_Config__c/fields/zCCP_CHT_Action_Type__c.field-meta.xml
<CustomField>
    <fullName>zCCP_CHT_Action_Type__c</fullName>
    <label>Action Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>zCCP_CHT_Chat_Config_Action_Types</valueSetName>
    </valueSet>
</CustomField>