Hackaton-Chatbot/force-app/main/default/objects/zCCP_CHT_Chat_Config__c/fields/zCCP_CHT_Active__c.field-meta.xml
<CustomField>
    <fullName>zCCP_CHT_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>