Hackaton-Chatbot/force-app/main/default/objects/zCCP_CHT_Chat_Config__c/fields/zCCP_CHT_Header_Message__c.field-meta.xml
<CustomField>
    <fullName>zCCP_CHT_Header_Message__c</fullName>
    <label>Header Message</label>
    <type>TextArea</type>
</CustomField>