Hackaton-Chatbot/force-app/main/default/objects/zCCP_CHT_Chat_Config__c/fields/zCCP_CHT_Parent_Chat_Config__c.field-meta.xml
<CustomField>
    <fullName>zCCP_CHT_Parent_Chat_Config__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Chat Config</label>
    <referenceTo>zCCP_CHT_Chat_Config__c</referenceTo>
    <relationshipLabel>Child Chat Configs</relationshipLabel>
    <relationshipName>Chat_Configs</relationshipName>
    <type>Lookup</type>
</CustomField>