Hackaton-Chatbot/force-app/main/default/objects/zCCP_CHT_Chat_Config__c/fields/zCCP_CHT_SOQL__c.field-meta.xml
<CustomField>
    <fullName>zCCP_CHT_SOQL__c</fullName>
    <label>SOQL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>