Hackaton-Chatbot/force-app/main/default/objects/zCCP_CHT_Chat_Config__c/fields/zCCP_CHT_Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>zCCP_CHT_Sort_Order__c</fullName>
    <label>Sort Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>