Hackaton-Chatbot/force-app/main/default/objects/zCCP_CHT_Chat_Config__c/recordTypes/zCCP_CHT_Action.recordType-meta.xml
<RecordType>
    <fullName>zCCP_CHT_Action</fullName>
    <active>true</active>
    <label>Action</label>
</RecordType>