Hackaton-Chatbot/force-app/main/default/objects/zCCP_CHT_Chat_Config__c/recordTypes/zCCP_CHT_Menu.recordType-meta.xml
<RecordType>
    <fullName>zCCP_CHT_Menu</fullName>
    <active>true</active>
    <label>Menu</label>
</RecordType>