Hackaton-Chatbot/force-app/main/default/objects/zCCP_CHT_Chat_Config__c/recordTypes/zCCP_CHT_Tag.recordType-meta.xml
<RecordType>
    <fullName>zCCP_CHT_Tag</fullName>
    <active>true</active>
    <label>Tag</label>
</RecordType>