Hackaton-Chatbot/force-app/main/default/objects/zCCP_CHT_Chat_Config__c/recordTypes/zCCP_CHT_Training_Phrase.recordType-meta.xml
<RecordType>
    <fullName>zCCP_CHT_Training_Phrase</fullName>
    <active>true</active>
    <label>Training Phrase</label>
</RecordType>