Hackaton-Chatbot/force-app/main/default/objects/zCCP_CHT_Chat_Config__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>zCCP_CHT_Type__c</columns>
    <columns>zCCP_CHT_Parent_Chat_Config__c</columns>
    <columns>zCCP_CHT_Sort_Order__c</columns>
    <columns>zCCP_CHT_Active__c</columns>
    <columns>zCCP_CHT_Action_Type__c</columns>
    <columns>zCCP_CHT_Action_Answer__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>