Hackaton-Chatbot/force-app/main/default/objects/zCCP_CHT_Chat_Config__c/listViews/zCCP_CHT_Tag.listView-meta.xml
<ListView>
    <fullName>zCCP_CHT_Tag</fullName>
    <columns>NAME</columns>
    <columns>zCCP_CHT_Parent_Chat_Config__c</columns>
    <columns>zCCP_CHT_Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>zCCP_CHT_Type__c</field>
        <operation>equals</operation>
        <value>zCCP_CHT_Tag</value>
    </filters>
    <label>Tag</label>
</ListView>